--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,4 +1,5 @@
 @import "./singlePost.css";
+@import "./homePage.css";
 
 /* Modern minimal theme with light/dark support */
 :root {
@@ -37,10 +38,16 @@
 * {
   box-sizing: border-box;
 }
+
 html,
 body {
   height: 100%;
 }
+
+img {
+  width: 100%;
+}
+
 body {
   margin: 0;
   font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Ubuntu,
@@ -58,7 +65,7 @@ body {
     ),
     var(--bg);
   color: var(--text);
-  line-height: 1.55;
+  font-size: 16px;
 }
 
 /* Layout */
@@ -91,10 +98,11 @@ main#app-content {
 h1,
 h2,
 h3 {
-  line-height: 1.2;
-  margin: 0.6em 0;
+  font-size: 16px;
+  padding: 0.5rem 0;
 }
 p {
+  margin: 0;
   color: var(--text);
 }
 
