--- a/src/styles/homePage.css
+++ b/src/styles/homePage.css
@@ -1,7 +1,7 @@
 .c-posts-container {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
   gap: 2rem;
   padding: 2rem 0rem;
@@ -11,12 +11,25 @@
 .c-posts-card {
   display: flex;
   flex-direction: column;
+  justify-content: center;
   max-width: 400px;
   gap: 0.5rem;
   border: 1px solid #eee;
   border-radius: 12px;
   padding: 12px;
   background-color: var(--card-bg);
+  cursor: pointer;
+}
+
+@media only screen and (min-width: 600px) {
+  .c-posts-container {
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: stretch;
+  }
+  .c-posts-card {
+    width: 400px;
+  }
 }
 
 .c-posts-media {
@@ -28,8 +41,9 @@
 
 .c-posts-img {
   display: flex;
-  max-width: 100%;
+  width: 100%;
   border-radius: 8px;
+  object-fit: cover;
 }
 
 .c-posts-meta {
