--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -2,6 +2,8 @@
 @import "./homePage.css";
 @import "./profiles.css";
 @import "./pagination.css";
+@import "./edit.css";
+@import "./myProfile.css";
 
 /* Modern minimal theme with light/dark support */
 :root {
