Added css for nav and fixed issues there

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -4,6 +4,7 @@
 @import "./pagination.css";
 @import "./edit.css";
 @import "./myProfile.css";
+@import "./navbar.css";
 
 /* Modern minimal theme with light/dark support */
 :root {
