--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -6,6 +6,8 @@
 @import "./myProfile.css";
 @import "./navbar.css";
 
+/* checking */
+
 /* Modern minimal theme with light/dark support */
 :root {
   --bg: #0b0e14;
